# corresponding-rs

./: README.md  cargo.toml
corresponding/: Cargo.toml
corresponding-macros/: Cargo.toml  README.md
corresponding-macros/src/: lib.rs
corresponding/examples/: corresponding.rs  database.rs  simple.rs
corresponding/src/: lib.rs  prelude.rs
corresponding/tests/: corresponding.rs
