[package]
name = "corresponding-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Procedural macros for corresponding crate"
homepage = "https://github.com/markjansnl/corresponding-rs"
repository = "https://github.com/markjansnl/corresponding-rs"
readme = "../README.md"
keywords = ["copy", "corresponding", "struct", "fields"]
categories = ["utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"